# fake-openssh-portable

./: .gitignore  CMakeLists.txt  vcpkg.json
ext/: README.md
openbsd-compat/: CMakeLists.txt
